syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "session.proto";

service Whisper {
    // Send a markdown whisper
    rpc WhisperMarkdown(WhisperMarkdownRequest) returns (google.protobuf.Empty);

    // Send a confirm whisper
    rpc WhisperConfirm(WhisperConfirmRequest) returns (WhisperConfirmResponse);

    // Send a disambiguation whisper
    rpc WhisperDisambiguation(WhisperDisambiguationRequest) returns (google.protobuf.Empty);

    // Send a form whisper
    rpc WhisperForm(WhisperFormRequest) returns (stream WhisperFormStreamResponse);

    // Send a list whisper
    rpc WhisperList(WhisperListRequest) returns (google.protobuf.Empty);
}

message WhisperMeta {
    string label = 1;
}

message WhisperMarkdownRequest {
    Session session = 1;
    WhisperMeta meta = 2;
    string markdown = 3;
}

message WhisperConfirmRequest {
    Session session = 1;
    WhisperMeta meta = 2;
    string markdown = 3;
    string rejectLabel = 4;
    string resolveLabel = 5;
}

message WhisperConfirmResponse {
    bool response = 1;
}

message WhisperFormRequest {
    Session session = 1;
    WhisperMeta meta = 2;
    string markdown = 3;
    string submitLabel = 4;
    string cancelLabel = 5;

    map <string, WhisperFormInput> inputs = 6;
}

message WhisperFormInput {
    message Checkbox {
        string label = 1;
        string tooltip = 2;
        bool value = 3;
        uint32 order = 4;
    }

    message Email {
        string label = 1;
        string tooltip = 2;
        string value = 3;
        uint32 order = 4;
    }

    message Markdown {
        string label = 1;
        string tooltip = 2;
        string value = 3;
        uint32 order = 4;
    }

    message Number {
        string label = 1;
        string tooltip = 2;
        float value = 3;
        float min = 4;
        float max = 5;
        uint32 order = 6;
    }

    message Password {
        string label = 1;
        string tooltip = 2;
        uint32 order = 3;
    }

    message Radio {
        string label = 1;
        string tooltip = 2;
        repeated string options = 3;
        uint32 order = 4;
    }

    message Select {
        string label = 1;
        string tooltip = 2;
        repeated string options = 3;
        uint32 order = 4;
    }

    message Tel {
        string label = 1;
        string tooltip = 2;
        string value = 3;
        string pattern = 4;
        uint32 order = 5;
    }

    message Text {
        string label = 1;
        string tooltip = 2;
        string value = 3;
        uint32 order = 4;
    }

    message Time {
        string label = 1;
        string tooltip = 2;
        google.protobuf.Timestamp value = 3;
        uint32 order = 4;
    }

    oneof InputOneof {
        Checkbox checkbox = 1;
        Email email = 2;
        Markdown markdown = 3;
        Number number = 4;
        Password password = 5;
        Radio radio = 6;
        Select select = 7;
        Tel tel = 8;
        Text text = 9;
        Time time = 10;
    }
}

message WhisperFormOutput {
    message Checkbox {
        bool value = 1;
    }

    message Email {
        string value = 1;
    }

    message Markdown {
        string value = 1;
    }

    message Number {
        float value = 1;
    }

    message Password {
        string value = 1;
    }

    message Radio {
        string value = 1;
    }

    message Select {
        string value = 1;
    }

    message Tel {
        string value = 1;
    }

    message Text {
        string value = 1;
    }

    message Time {
        google.protobuf.Timestamp value = 1;
    }

    oneof OutputOneof {
        Checkbox checkbox = 1;
        Email email = 2;
        Markdown markdown = 3;
        Number number = 4;
        Password password = 5;
        Radio radio = 6;
        Select select = 7;
        Tel tel = 8;
        Text text = 9;
        Time time = 10;
    }
}

message WhisperFormResult {
    bool submitted = 1; // true = form was submitted, false = form was canceled
    map <string, WhisperFormOutput> outputs = 2;
}

message WhisperFormUpdate {
    string key = 1;
    WhisperFormOutput output = 2;
}

message WhisperFormStreamResponse {
    oneof WhisperFormResponseOneof {
        WhisperFormResult result = 1;
        WhisperFormUpdate update = 2;
    }

    string error = 15;
}

message WhisperDisambiguationRequest {
    Session session = 1;
    WhisperMeta meta = 2;
    map <string, WhisperDisambiguationElement> elements = 3;
}

message WhisperDisambiguationElement {
    uint32 order = 1;

    message Option {
        string label = 1;
    }

    message Text {
        string body = 1;
    }

    oneof ElementOneof {
        Option option = 2;
        Text text = 3;
    }
}

message WhisperDisambiguationResponse {
    bool response = 1;
}

message WhisperListRequest {
    Session session = 1;
    WhisperMeta meta = 2;
    map <string, WhisperListElement> elements = 3;
}

message WhisperListElement {
    enum Style {
        STYLE_NONE = 0;
        STYLE_SUCCESS = 1;
        STYLE_WARN = 2;
        STYLE_ERROR = 3;
    }

    enum Align {
        ALIGN_LEFT = 0;
        ALIGN_CENTER = 1;
        ALIGN_RIGHT = 2;
    }

    uint32 order = 1;
    bool extra = 2; // 0 = shows when whisper is in "less" mode AND "more" mode. 1 = shows only when whisper is in "more" mode.

    message Pair {
        string label = 1;
        string value = 2;
        Style style = 3;
        bool copyable = 4;
    }

    message Message {
        string header = 1;
        string body = 2;
        Style style = 3;
        Align align = 4;
    }

    message Divider {
        Style style = 1;
    }

    oneof ElementOneof {
        Pair pair = 4;
        Message message = 5;
        Divider divider = 6;
    }
}